--- a/index.css
+++ b/index.css
@@ -209,3 +209,142 @@
   font-weight: 600;
   font-size: 24px;
 }
+
+.explore-section {
+  background-color: #f5f7fa;
+}
+
+.eplore-heading {
+  color: #183b56;
+  font-family: "Roboto";
+  font-size: 58px;
+  font-weight: 900;
+}
+
+.explore-card {
+  background-color: #ffffff;
+  border-radius: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.explore-card-heading {
+  color: #183b56;
+  font-family: "Roboto";
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.card-image {
+  width: 100%;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+.inner-card {
+  margin: 7px;
+}
+
+.card-product-name {
+  color: #1f2933;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.explore-card-link {
+  color: #ff9f00;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.contact-section {
+  background-color: #f5f7fa;
+  padding: 70px;
+  text-align: center;
+}
+
+.contact-heading {
+  color: #183b56;
+  font-weight: 900;
+  font-family: "Roboto";
+  font-size: 60px;
+  margin-bottom: 20px;
+}
+
+.contact-button {
+  color: #ff9f00;
+  font-weight: 600;
+  font-family: "Roboto";
+  font-size: 30px;
+  background-color: transparent;
+  border-style: solid;
+  border-width: 4px;
+  border-color: #ff9f00;
+  padding: 14px;
+  transition: all 0.3s;
+}
+
+.contact-button:hover {
+  background-color: black;
+  box-shadow: 1px 1px 20px 8px #ff9f00;
+  text-shadow: 1px 1px 20px #ff9f00;
+}
+
+.footer-section {
+  background-color: #0d2436;
+}
+
+.footer-image {
+  width: 190px;
+  margin-bottom: 23px;
+}
+
+.icon-contanier {
+  background-color: #152c3e;
+  height: 58px;
+  width: 58px;
+  padding: 17px;
+  border-radius: 38px;
+  margin-right: 6px;
+}
+
+.footer-icon {
+  color: #5a7184;
+  font-size: 24px;
+}
+
+.footer-address {
+  font-family: "Roboto";
+  font-size: 18px;
+}
+
+.footer-heading {
+  color: #5a7184;
+  font-family: "Roboto";
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.footer-list {
+  color: #5a7184;
+  font-family: "Roboto";
+  font-size: 21px;
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.list-text {
+  margin-bottom: 7px;
+}
+
+.footer-horigontalline {
+  background-color: #5a7184;
+}
+
+.footer-copyright {
+  font-family: "Roboto";
+  font-size: 17px;
+}
